Complete F3 OAuth and Web3 contract hardening